# snwf

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: apisec-scan.yml
example/: Cargo.toml  test_file.txt
example/src/: main.rs
src/: common.rs  core.rs  lib.rs  prelude.rs  protocol.rs  recipient.rs  sender.rs  stream.rs
src/common/: alias.rs  constant.rs  macros.rs
src/core/: progress.rs  traits.rs
src/protocol/: error.rs  handshake.rs  udt.rs
src/protocol/rsync/: constant.rs  error.rs  mod.rs  prelude.rs  raw.rs  rsync_recipient.rs  rsync_sender.rs
src/protocol/udt/: contains.rs  detail.rs  error.rs  mod.rs  prelude.rs  raw.rs  transport.rs  udt_recipient.rs  udt_sender.rs
