[package]
name = "snwf"
version = "0.1.0"
edition = "2021"

[features]
default = ["udt"]
udt = ["dep:tokio-udt"]

[dependencies]
async-trait = "0.1"
derive-new = "0.5"
log = "0.4"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1"
tokio = { version = "1", features = [ "io-std", "io-util", "fs" ] }
tokio-udt = { version = "0.1.0-alpha.8", optional = true }
file-hashing = "0.1"
blake2 = "0.10"

[dev-dependencies]
assert_fs = "1.0.10"
env_logger = "0.10.0"
tokio = { version = "1", features = [ "full" ] }
