[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
snwf = { path = "../" }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = 'fat'